# gifbox

./: .gitignore  Makefile.am  README  build.sh  configure.ac  convertToGif  extrinsics.yml  filmPlayer.cpp  filmPlayer.h  gifbox.cpp  httpServer.cpp  httpServer.h  intrinsics.yml  main.cpp  run_stereo_calibration.sh  stereoCamera.cpp  stereoCamera.h  stereo_calib.xml  v4l2output.cpp  v4l2output.h
doc/: uml-graph.tex
src/: Makefile.am  config.h  filmPlayer.cpp  filmPlayer.h  gifbox.cpp  gifbox.h  httpServer.cpp  httpServer.h  k2Camera.cpp  k2Camera.h  layerMerger.cpp  layerMerger.h  libfreenect.hpp  rgbdCamera.cpp  rgbdCamera.h  stereoCamera.cpp  stereoCamera.h  v4l2output.cpp  v4l2output.h  values.h
stereoGpu/: build.sh  main.cpp
tools/: Makefile.am  build.sh  stereo_calib.cpp
