bin_PROGRAMS = \ 
	stereo_calibration \
	image_list_creator

stereo_calibration_SOURCES = \
	stereo_calib.cpp

stereo_calibration_CXXFLAGS = \
	$(AM_CPPFLAGS) \
	$(OPENCV_CFLAGS)

stereo_calibration_LDADD = \
	$(OPENCV_LIBS)

image_list_creator_SOURCES = \
	imagelist_creator.cpp

image_list_creator_CXXFLAGS = \
	$(AM_CPPFLAGS) \
	$(OPENCV_CFLAGS)

image_list_creator_LDADD = \
	$(OPENCV_LIBS)
